include/freeusd/c/freeusd.h

/** Result / error code (0 = success). */
enum FreeusdResult {
  FREEUSD_OK = 0,
  FREEUSD_ERR_INVALID_ARGUMENT = 1,
  FREEUSD_ERR_PARSE = 2,
  FREEUSD_ERR_NOT_FOUND = 3,
  FREEUSD_ERR_INTERNAL = 4,
};
typedef struct FreeusdStage FreeusdStage;
/** Project version string (static storage; do not free). */
FREEUSD_C_API const char* freeusd_version_string(void);
/** USDC crate file magic / identifier prefix (``PXR-USDC``; static storage; do not free). */
FREEUSD_C_API const char* freeusd_usdc_crate_identifier_utf8(void);
/**
 * Last error message for the calling thread, valid until the next FreeUSD C API
 * call on this thread. Never null (empty string if no error was recorded).
 */
FREEUSD_C_API const char* freeusd_last_error_message(void);
/** Free strings returned by FreeUSD C API (e.g. @ref freeusd_layer_save_usda_to_string). */
FREEUSD_C_API void freeusd_string_free(char* s);
/**
 * Open a USDA root file from disk and build a composed stage (optionally stacking authored @c subLayers).
 *
 * @p sublayer_policy: @c 0 = root file only (@c RootLayerSublayersPolicy::None), @c 1 = immediate @c subLayers only
 * (@c Shallow), @c 2 = depth-first nested @c subLayers (@c DepthFirst, default in C++).
 *
 * On success the stage owns all loaded layers internally (not exposed as @c FreeusdLayer). On failure returns NULL;
 * see @ref freeusd_last_error_message.
 */
FREEUSD_C_API FreeusdStage* freeusd_stage_open_from_root_file_utf8(const char* layer_path_utf8, int sublayer_policy);
FREEUSD_C_API void freeusd_stage_free(FreeusdStage* stage);
/** 1 if prim path exists on the composed stage, 0 if not, negative @ref FreeusdResult on error. */
FREEUSD_C_API int freeusd_stage_prim_is_valid(const FreeusdStage* stage, const char* prim_path_utf8);
/**
 * Compute the prim's local transform using the validated `usdGeom::Xformable` subset.
 * On @ref FREEUSD_OK, @p out_row_major receives 16 doubles in row-major order.
 * Returns @ref FREEUSD_ERR_NOT_FOUND for invalid prims.
 */
FREEUSD_C_API int freeusd_stage_compute_local_transform_matrix4d(const FreeusdStage* stage, const char* prim_path_utf8,
                                                                 double time, double* out_row_major);
/**
 * Compute the prim's local-to-world transform using the validated `usdGeom::Xformable` subset.
 * On @ref FREEUSD_OK, @p out_row_major receives 16 doubles in row-major order.
 * Returns @ref FREEUSD_ERR_NOT_FOUND for invalid prims.
 */
FREEUSD_C_API int freeusd_stage_compute_local_to_world_transform_matrix4d(const FreeusdStage* stage,
                                                                          const char* prim_path_utf8, double time,
                                                                          double* out_row_major);
/**
 * Compute inherited `visibility` using the validated `usdGeom::Imageable` subset.
 * On @ref FREEUSD_OK, @p out_visible receives 0 or 1.
 * Returns @ref FREEUSD_ERR_NOT_FOUND for invalid prims.
 */
FREEUSD_C_API int freeusd_stage_compute_imageable_visibility(const FreeusdStage* stage, const char* prim_path_utf8,
                                                             double time, int* out_visible);
/**
 * Compute inherited `purpose` using the validated `usdGeom::Imageable` subset.
 * On @ref FREEUSD_OK, @p *out_purpose_utf8 is malloc'd UTF-8; free with @ref freeusd_string_free.
 * Returns @ref FREEUSD_ERR_NOT_FOUND for invalid prims.
 */
FREEUSD_C_API int freeusd_stage_compute_imageable_purpose_utf8(const FreeusdStage* stage, const char* prim_path_utf8,
                                                               double time, char** out_purpose_utf8);
/**
 * Compute the prim's local-space bounds using the validated `usdGeom::Boundable` subset.
 * On @ref FREEUSD_OK, @p out_min_* and @p out_max_* receive the box corners. Empty boxes are reported as
 * @ref FREEUSD_ERR_NOT_FOUND.
 */
FREEUSD_C_API int freeusd_stage_compute_boundable_local_bounds(const FreeusdStage* stage, const char* prim_path_utf8,
                                                               double time, double* out_min_x, double* out_min_y,
                                                               double* out_min_z, double* out_max_x, double* out_max_y,
                                                               double* out_max_z);
/**
 * Compute the prim's world-space bounds using the validated `usdGeom::Boundable` subset.
 * On @ref FREEUSD_OK, @p out_min_* and @p out_max_* receive the box corners. Empty boxes are reported as
 * @ref FREEUSD_ERR_NOT_FOUND.
 */
FREEUSD_C_API int freeusd_stage_compute_boundable_world_bounds(const FreeusdStage* stage, const char* prim_path_utf8,
                                                               double time, double* out_min_x, double* out_min_y,
                                                               double* out_min_z, double* out_max_x, double* out_max_y,
                                                               double* out_max_z);
/**
 * Read evaluated attribute as double at @p time (strongest opinion; follows
 * attribute connections where implemented).
 * Succeeds for @c double payloads, or @c float / @c int32 / @c int64 coerced to @c double.
 * Missing prims, missing attributes, and unsupported coercions report @ref FREEUSD_ERR_NOT_FOUND.
 * @return @ref FREEUSD_OK or error code; @p out_value unchanged on failure.
 */
FREEUSD_C_API int freeusd_stage_read_field_double(const FreeusdStage* stage, const char* prim_path_utf8,
                                                  const char* attr_name_utf8, double time, double* out_value);
/**
 * Read evaluated attribute as UTF-8 string at @p time (string payload, or token text).
 * Missing prims, missing attributes, and non-string/non-token payloads report @ref FREEUSD_ERR_NOT_FOUND.
 * On @ref FREEUSD_OK, @p *out_string is malloc'd UTF-8; free with @ref freeusd_string_free.
 */
FREEUSD_C_API int freeusd_stage_read_field_string(const FreeusdStage* stage, const char* prim_path_utf8,
                                                  const char* attr_name_utf8, double time, char** out_string);
/**
 * Resolve a Material ``outputs:surface`` connection to the connected shader prim path.
 * On @ref FREEUSD_OK, @p *out_shader_path_utf8 is malloc'd; free with @ref freeusd_string_free.
 */
FREEUSD_C_API int freeusd_stage_read_material_surface_shader_path(const FreeusdStage* stage,
                                                                  const char* material_path_utf8,
                                                                  char** out_shader_path_utf8);
/**
 * Read ``UsdPreviewSurface`` ``inputs:diffuseColor`` (color3f) at @p time from a shader prim.
 * @p out_rgb must point to three floats (r, g, b). Missing shader or input reports @ref FREEUSD_ERR_NOT_FOUND.
 */
FREEUSD_C_API int freeusd_stage_read_preview_surface_diffuse_color(const FreeusdStage* stage,
                                                                 const char* shader_path_utf8, double time,
                                                                 float out_rgb[3]);
/**
 * Read ``UsdPreviewSurface`` diffuse texture asset path (direct asset or connected ``inputs:file``).
 * On @ref FREEUSD_OK, @p *out_path_utf8 is malloc'd; free with @ref freeusd_string_free.
 */
FREEUSD_C_API int freeusd_stage_read_preview_surface_diffuse_texture_asset_path(
    const FreeusdStage* stage, const char* shader_path_utf8, double time, char** out_path_utf8);
/** Evaluated ``UsdLuxDistantLight`` scalar inputs at a time code. */
typedef struct FreeusdLuxDistantLightSample {
  float intensity;
  float color[3];
  float angle;
} FreeusdLuxDistantLightSample;
/**
 * Read ``UsdLuxDistantLight`` ``inputs:intensity``, ``inputs:color``, and ``inputs:angle`` at @p time.
 * Missing light prims or missing inputs report @ref FREEUSD_ERR_NOT_FOUND.
 */
FREEUSD_C_API int freeusd_stage_read_lux_distant_light_sample(const FreeusdStage* stage,
                                                              const char* light_path_utf8, double time,
                                                              FreeusdLuxDistantLightSample* out_sample);
/**
 * Read ``OpenVDBAsset`` ``filePath`` and ``fieldName`` at @p time.
 * On @ref FREEUSD_OK, @p *out_file_path_utf8 and @p *out_field_name_utf8 are malloc'd; free with
 * @ref freeusd_string_free. Missing asset prims or missing inputs report @ref FREEUSD_ERR_NOT_FOUND.
 */
FREEUSD_C_API int freeusd_stage_read_openvdb_asset_info(const FreeusdStage* stage,
                                                        const char* asset_path_utf8, double time,
                                                        char** out_file_path_utf8,
                                                        char** out_field_name_utf8);
/** Evaluated ``UsdPhysicsScene`` gravity inputs at a time code. */
typedef struct FreeusdPhysicsSceneSample {
  float gravity_direction[3];
  float gravity_magnitude;
} FreeusdPhysicsSceneSample;
/**
 * Read ``UsdPhysicsScene`` ``physics:gravityDirection`` and ``physics:gravityMagnitude`` at @p time.
 * Missing scene prims or missing inputs report @ref FREEUSD_ERR_NOT_FOUND.
 */
FREEUSD_C_API int freeusd_stage_read_physics_scene_sample(const FreeusdStage* stage,
                                                          const char* scene_path_utf8, double time,
                                                          FreeusdPhysicsSceneSample* out_sample);
/** Evaluated ``PhysicsRigidBodyAPI`` fields at a time code. */
typedef struct FreeusdPhysicsRigidBodySample {
  float mass;
  int has_kinematic_enabled;
  int kinematic_enabled;
} FreeusdPhysicsRigidBodySample;
/**
 * Read ``PhysicsRigidBodyAPI`` ``physics:mass`` and optional ``physics:kinematicEnabled`` at @p time.
 * Missing rigid-body prims or missing ``physics:mass`` report @ref FREEUSD_ERR_NOT_FOUND.
 */
FREEUSD_C_API int freeusd_stage_read_physics_rigid_body_sample(const FreeusdStage* stage,
                                                               const char* prim_path_utf8, double time,
                                                               FreeusdPhysicsRigidBodySample* out_sample);
/** Evaluated ``PhysicsCollisionAPI`` fields at a time code. */
typedef struct FreeusdPhysicsCollisionSample {
  int collision_enabled;
} FreeusdPhysicsCollisionSample;
/**
 * Read ``PhysicsCollisionAPI`` ``physics:collisionEnabled`` at @p time.
 * Missing collision prims or missing ``physics:collisionEnabled`` report @ref FREEUSD_ERR_NOT_FOUND.
 */
FREEUSD_C_API int freeusd_stage_read_physics_collision_sample(const FreeusdStage* stage,
                                                              const char* prim_path_utf8, double time,
                                                              FreeusdPhysicsCollisionSample* out_sample);
/** Evaluated ``PhysicsMassAPI`` fields at a time code. */
typedef struct FreeusdPhysicsMassSample {
  float density;
  float center_of_mass[3];
} FreeusdPhysicsMassSample;
/**
 * Read ``PhysicsMassAPI`` ``physics:density`` and ``physics:centerOfMass`` at @p time.
 * Missing mass prims or missing inputs report @ref FREEUSD_ERR_NOT_FOUND.
 */
FREEUSD_C_API int freeusd_stage_read_physics_mass_sample(const FreeusdStage* stage,
                                                         const char* prim_path_utf8, double time,
                                                         FreeusdPhysicsMassSample* out_sample);
/**
 * Composed prim active flag (strongest opinion; default true if no opinion).
 * @p out_active receives 0 or 1.
 */
FREEUSD_C_API int freeusd_stage_resolve_prim_active(const FreeusdStage* stage, const char* prim_path_utf8,
                                                    int* out_active);
/** 1 if any composed layer authors @c active on the prim, 0 if not, negative @ref FreeusdResult on error. */
FREEUSD_C_API int freeusd_stage_resolve_has_prim_active_opinion(const FreeusdStage* stage,
                                                                const char* prim_path_utf8);
/**
 * Composed prim specifier kind for @p prim_path_utf8 (see @ref FreeusdPrimSpecifierKind).
 * On success returns @c 0-@c 3. On error returns the negation of a @ref FreeusdResult code (e.g. @c -1 invalid argument).
 */
FREEUSD_C_API int freeusd_stage_resolve_prim_specifier_kind(const FreeusdStage* stage, const char* prim_path_utf8);
/**
 * Composed prim schema kind (e.g. "Xform"). Returns malloc'd UTF-8 or NULL if none / error.
 * Free with @ref freeusd_string_free.
 */
FREEUSD_C_API char* freeusd_stage_resolve_prim_kind(const FreeusdStage* stage, const char* prim_path_utf8);
/** 1 if composed prim has a schema kind opinion, 0 if not, negative @ref FreeusdResult on error. */
FREEUSD_C_API int freeusd_stage_resolve_has_prim_kind(const FreeusdStage* stage, const char* prim_path_utf8);